--- a/src/content/pages/reviews.html
+++ b/src/content/pages/reviews.html
@@ -1,6 +1,6 @@
 ---
-title: 'Reviews'
-description: 'Meta description for the page'
+title: 'A & J Seal Coating & Crack Filling Michigan'
+description: 'Protect and beautify your driveway or parking lot with A & J Sealcoating! We offer expert driveway sealcoating, parking lot sealing, and crack filling in Detroit. Family-owned, professional, and highly rated by homeowners. Call (313)-268-0951 for a free estimate and experience the best sealcoating service in Michigan!'
 preloadImg: '/assets/images/cabinets2.jpg'
 permalink: 'reviews/'
 eleventyNavigation:
